@@ -1,5 +1,13 @@
 2012-12-07  Christopher Faylor  <me.cygwin2012@cgf.cx>
 
+	* exceptions.cc (sigpacket::process): Reorganize to avoid use of tls
+	before initialization.
+
+	* fhandler_fifo.cc (fhandler_fifo::arm): Avoid improper printing of
+	integer as a string in debug output.
+
+2012-12-07  Christopher Faylor  <me.cygwin2012@cgf.cx>
+
 	* sigproc.h (sigpacket): Remove parameter names from declarations.
 	(sigpacket::sigtls): Rename from 'tls'.
 	* exceptions.cc (sigpacket::process): Define local tls variable and
